--- a/about.me.html
+++ b/about.me.html
@@ -74,11 +74,9 @@
                     
                     <span class="tags"></span>
                 </section>
-                <article class="content"><h2>纸小墨</h2>
+                <article class="content"><h2>郑伟</h2>
 
-<p>构建只为纯粹书写的博客。</p>
-
-<p><a href="http://www.chole.io/">http://www.chole.io/</a></p>
+<p>前端爱好者</p>
 </article>
                 <section class="author">
                     <div class="avatar" style="background-image: url(/images/avatar.png);"></div>
@@ -109,7 +107,7 @@
             document.write(new Date().getFullYear());
         </script>
     </span>
-    <span class="publish">Powered by <a href="http://www.chole.io/" target="_blank">Ink</a></span>
+    <span class="publish">Powered by <a href="https://zhengwei1949.github.io/" target="_blank">zhengwei</a></span>
 </footer>
 
         <script src="/bundle/index.js"></script>
