--- a/about.me.html
+++ b/about.me.html
@@ -81,7 +81,7 @@
                 <section class="author">
                     <div class="avatar" style="background-image: url(/images/avatar.png);"></div>
                     <a class="name" href="/about.me.html">郑伟</a>
-                    <div class="intro">前端技术学习</div>
+                    <div class="intro">so you want to be a frontend developer</div>
                 </section>
                 <section class="recommend">
                     
