--- a/理解promise.html
+++ b/理解promise.html
@@ -283,7 +283,7 @@ console.log(test.next().value) // -&gt; 2
                     
                     <section class="nav next more">
                         <div class="head">下篇文章</div>
-                        <a class="link" href="/%e6%89%93%e5%8c%85sea.js.html">打包sea.js</a>
+                        <a class="link" href="/gulp%e4%bd%bf%e7%94%a8%e6%80%bb%e7%bb%93.html">gulp总结</a>
                     </section>
                     
                 </section>
