--- a/vue cli使用总结.html
+++ b/vue cli使用总结.html
@@ -132,7 +132,7 @@
                     
                     <section class="nav next more">
                         <div class="head">下篇文章</div>
-                        <a class="link" href="/%e6%89%92%e7%bd%91%e7%ab%99%e6%95%99%e7%a8%8b.html">扒网站教程</a>
+                        <a class="link" href="/vue%e7%ae%80%e6%98%8e%e6%95%99%e7%a8%8b.html">vue简明教程</a>
                     </section>
                     
                 </section>
