--- a/gulp使用总结.html
+++ b/gulp使用总结.html
@@ -237,7 +237,7 @@ gulp.task('scripts',function(){
                     
                     <section class="nav next more">
                         <div class="head">下篇文章</div>
-                        <a class="link" href="/%e7%ae%80%e5%8e%86.html">如何写简历</a>
+                        <a class="link" href="/hexo.html">vue简明教程</a>
                     </section>
                     
                 </section>
