--- a/gulp使用总结.html
+++ b/gulp使用总结.html
@@ -237,7 +237,7 @@ gulp.task('scripts',function(){
                     
                     <section class="nav next more">
                         <div class="head">下篇文章</div>
-                        <a class="link" href="/hexo.html">vue简明教程</a>
+                        <a class="link" href="/angular_jquery.html">angular中使用jquery</a>
                     </section>
                     
                 </section>
