--- a/打包sea.js.html
+++ b/打包sea.js.html
@@ -250,7 +250,7 @@ gulp.task('cmd', function () {
                     
                     <section class="nav next more">
                         <div class="head">下篇文章</div>
-                        <a class="link" href="/angular_%e5%86%85%e7%bd%ae%e6%8c%87%e4%bb%a4%e6%b1%87%e6%80%bb.html">angular内置指令汇总</a>
+                        <a class="link" href="/bower%e4%bd%bf%e7%94%a8%e6%89%8b%e8%ae%b0.html">bower使用手记</a>
                     </section>
                     
                 </section>
