--- a/常用前端资源汇总.html
+++ b/常用前端资源汇总.html
@@ -119,7 +119,7 @@
                     
                     <section class="nav next more">
                         <div class="head">下篇文章</div>
-                        <a class="link" href="/angular_jquery.html">angular中使用jquery</a>
+                        <a class="link" href="/angular_%e5%86%85%e7%bd%ae%e6%8c%87%e4%bb%a4%e6%b1%87%e6%80%bb.html">angular内置指令汇总</a>
                     </section>
                     
                 </section>
